--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "mongoose": "^7.4.3",
+    "node": "^20.15.0",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
